replace 'is empty' on 'is null'
is prevent Models toArray method calls

--- a/src/Template/cup/editor.twig
+++ b/src/Template/cup/editor.twig
@@ -1,7 +1,7 @@
 {% block editor %}
     {% set editorId = random() %}
 
-    {% if args is empty %}
+    {% if args is null %}
         {% set args = {} %}
     {% endif %}
 
