--- a/src/Template/cup/form-header.twig
+++ b/src/Template/cup/form-header.twig
@@ -4,7 +4,7 @@
     update - header 2
 #}
 <div>
-    {% if item is empty %}
+    {% if item is null %}
         <h2 class="text-white pb-2 fw-bold">{{ create|locale }}</h2>
     {% else %}
         <h2 class="text-white pb-2 fw-bold">
