--- a/src/Template/cup/reference/currencies/form.twig
+++ b/src/Template/cup/reference/currencies/form.twig
@@ -103,7 +103,7 @@
                                     'name': 'status',
                                     'args': {
                                         'option': _(['yes', 'no']),
-                                        'selected': item is empty or item.status ? 'yes' : 'no'
+                                        'selected': item is null or item.status ? 'yes' : 'no'
                                     }
                                 } %}
                             </div>
