--- a/src/Template/cup/form-tags.twig
+++ b/src/Template/cup/form-tags.twig
@@ -1,7 +1,7 @@
 {% block tags %}
     {% set inputId = random() %}
 
-    {% if args is empty %}
+    {% if args is null %}
         {% set args = {} %}
     {% endif %}
 
