--- a/src/Template/mixin/form.twig
+++ b/src/Template/mixin/form.twig
@@ -9,13 +9,13 @@
     postfix_btn - bootstrap postfix btn
 #}
 {% htmlcompress %}
-    {% if name is empty %}
+    {% if name is null %}
         {% set name = '' %}
     {% endif %}
-    {% if type is empty %}
+    {% if type is null %}
         {% set type = 'text' %}
     {% endif %}
-    {% if args is empty %}
+    {% if args is null %}
         {% set args = {} %}
     {% endif %}
     {% set error = '' %}
