change method User getName -> name

--- a/src/Template/cup/catalog/order/form-modal-user.twig
+++ b/src/Template/cup/catalog/order/form-modal-user.twig
@@ -6,7 +6,7 @@
                 'type': 'text',
                 'postfix_btn': '<a href="/cup/user/add" target="_blank" class="btn btn-outline-secondary btn-icon h-100"><i class="fas fa-user-plus" style="padding-top: 2px;"></i></a>',
                 'args': {
-                    'value': order.user ? order.user.getName() : '',
+                    'value': order.user ? order.user.name() : '',
                     'list': 'users',
                     'autocomplete': 'off',
                 }
@@ -14,7 +14,7 @@
 
             <datalist id="users">
                 {% if order.user %}
-                    <option data-json="{{ order.user }}" value="{{ order.user.getName() }}">{{ [order.user.phone, order.user.email]|join(' ')|trim }}</option>
+                    <option data-json="{{ order.user }}" value="{{ order.user.name() }}">{{ [order.user.phone, order.user.email]|join(' ')|trim }}</option>
                 {% endif %}
             </datalist>
 
