--- a/src/Template/cup/publication/category/index-item.twig
+++ b/src/Template/cup/publication/category/index-item.twig
@@ -4,7 +4,7 @@
             {{ item.title|u.truncate(50, '...') }}
 
             <div class="d-none d-md-inline">
-                {% if item.public == false %}
+                {% if item.is_public == false %}
                     <i class="fas fa-eye-slash" data-toggle="tooltip" data-placement="right" title="{{ 'Hidden category'|locale }}"></i>
                 {% endif %}
             </div>
