--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -78,8 +78,8 @@
                                             'type': 'select',
                                             'name': 'group_uuid',
                                             'args': {
-                                                'option': _({(NIL): 'WITHOUT_GROUP'}|merge(groups.pluck('title', 'uuid').all())),
-                                                'selected': item.group_uuid ?? parameter('user_group')
+                                                'option': _({(null): 'WITHOUT_GROUP'}|merge(groups.pluck('title', 'uuid').all())),
+                                                'selected': item.group_uuid ?? parameter('user_group', null)
                                             }
                                         } %}
                                     </div>
