--- a/src/Template/cup/user/index.twig
+++ b/src/Template/cup/user/index.twig
@@ -52,7 +52,7 @@
                                     'type': 'select',
                                     'name': 'group_uuid',
                                     'args': {
-                                        'option': _({'': '---', (NIL): 'WITHOUT_GROUP'}|merge(groups.pluck('title', 'uuid').all())),
+                                        'option': _({'': '---', (null): 'WITHOUT_GROUP'}|merge(groups.pluck('title', 'uuid').all())),
                                         'selected': _request.group_uuid ?? ''
                                     }
                                 } %}
