improve order form product add

--- a/src/Template/cup/catalog/order/form-modal-product.twig
+++ b/src/Template/cup/catalog/order/form-modal-product.twig
@@ -13,32 +13,8 @@
             <datalist id="products"></datalist>
         </div>
 
-        <div class="col-6">
-            {% include 'cup/form.twig' with {
-                'label': 'Price type'|locale,
-                'type': 'select',
-                'args': {
-                    'required': true,
-                    'option': _(constant('/App/Domain/References/Catalog::PRODUCT_PRICE_TYPE_USER_SELECT')),
-                }
-            } %}
-        </div>
-
-        <div class="col-6">
-            {% include 'cup/form.twig' with {
-                'label': 'Count'|locale,
-                'type': 'number',
-                'args': {
-                    'value': '1',
-                    'placeholder': '1',
-                    'step': 'any',
-                    'min': '1',
-                }
-            } %}
-        </div>
-
         <div class="col-12">
-            <div class="text-right" style="margin-top: 37px;">
+            <div class="text-right">
                 <button type="button" class="btn btn-outline-info">{{ 'Add product'|locale }}</button>
             </div>
         </div>
