new catalog section statistic

--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -119,6 +119,11 @@
                                 <span class="sub-item">{{ 'Attributes'|locale }}</span>
                             </a>
                         </li>
+                        <li>
+                            <a href="/cup/catalog/statistic">
+                                <span class="sub-item">{{ 'Statistic'|locale }}</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </li>
