--- a/src/Template/cup/reference/deliveries/form-item.twig
+++ b/src/Template/cup/reference/deliveries/form-item.twig
@@ -18,7 +18,7 @@
             'name': 'value[' ~ (loop.index0 ?? 0) ~ '][condition]',
             'prefix': 'total >='|locale,
             'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Cart total must be greater than or equal.'|locale) ~ '"></i>',
-            'postfix_btn': '<button type="button" data-btn-reference-deliveries-remove class="btn btn-outline-danger btn-icon h-100"><i class="far fa-fw fa-trash"></i></button>',
+            'postfix_btn': '<button type="button" data-btn-reference-deliveries-remove class="btn btn-outline-danger btn-icon h-100"><i class="fas fa-fw fa-trash-alt"></i></button>',
             'args': {
                 'required': true,
                 'value': pair.condition ?? 0,
