--- a/src/Template/cup/donate.twig
+++ b/src/Template/cup/donate.twig
@@ -1,14 +1,39 @@
 <a href="#btn-modal-donate" rel="modal:open" class="nav-link"><i class="fa fa-donate"></i></a>
-
-<div id="btn-modal-donate" class="modal p-2 text-center">
-    <iframe src="https://getwebspace.github.io/platform-donate/index.{{ _language }}.html" style="width: 100%; height: 100%; padding: 0; border: 0; z-index: 2147483647;"></iframe>
-</div>
+<div id="btn-modal-donate" class="modal p-2 text-center"></div>
 
 <style>
+    .fa-donate.fa-shake,
+    .fa-donate.fa-bounce {
+        text-shadow: 0 0 1em rgba(218, 165, 32, 0.3), 0 0 0.2em rgba(184, 134, 11, 0.2);
+    }
+
     #btn-modal-donate {
-        width: 650px !important;
-        max-width: 650px !important;
-        height: 555px !important;
-        max-height: 555px !important;
+        width: 700px !important;
+        max-width: 700px !important;
+        height: 600px !important;
+        max-height: 600px !important;
     }
 </style>
+
+<script>
+    document.addEventListener('DOMContentLoaded', async () => {
+        let init = false;
+        let template = `<iframe src="https://getwebspace.github.io/platform-donate/index.{{ _language }}.html" style="width: 100%; height: 100%; padding: 0; border: 0; z-index: 2147483647;"></iframe>`;
+
+        document.querySelector('a[href="#btn-modal-donate"]').addEventListener('click', () => {
+            if (!init) {
+                document.querySelector('#btn-modal-donate').innerHTML = template;
+            }
+
+            init = true;
+        });
+
+        let currentDay = (new Date()).getDate();
+        if (currentDay >= 1 && currentDay <= 2) {
+            document.querySelector('a[href="#btn-modal-donate"] i').classList.add('fa-shake');
+        }
+        if (currentDay >= 15 && currentDay <= 16) {
+            document.querySelector('a[href="#btn-modal-donate"] i').classList.add('fa-bounce');
+        }
+    })
+</script>
